<resources>
    <string name="app_name">Patco Today</string>
    <string name="title_schedules">Schedules</string>
    <string name="title_map">Station Map</string>
    <string name="title_info">Information</string>
    <string name="station_map">Station Map</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="special_schedules">Special Schedules Available</string>
    <string name="special_schedule_header">Special Schedule(s):</string>
    <string name="special_schedule_about">Checking for special schedules . . .</string>
    <string name="special_schedule_about_prefix">Special Schedules: %1$s</string>
    <string name="special_schedule_download">View Schedule</string>
    <string name="special_schedule_link" />
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="hint_noArrivals">No Arrivals Found</string>

    <string-array name="stations_list">
        <item>Lindenwold</item>
        <item>Ashland</item>
        <item>Woodcrest</item>
        <item>Haddonfield</item>
        <item>Westmont</item>
        <item>Collingswood</item>
        <item>Ferry Avenue</item>
        <item>Broadway</item>
        <item>City Hall</item>
        <item>8th &amp; Market</item>
        <item>9–10th &amp; Locust</item>
        <item>12–13th &amp; Locust</item>
        <item>15–16th &amp; Locust</item>
    </string-array>

<!-- Map Details Page -->
    <string name="map_details_subDescription">For directions only. Not a mailing address.</string>
    <string name="map_details_station_amenities">Station Amenities:</string>
    <string name="map_details_schedule_information">Schedule Information:</string>
    <string name="map_details_fares">Fares &amp; Travel Times Between Stations:</string>
    <string name="map_details_gated_parking">Gated Parking: </string>
    <string name="map_details_meters">Meters: </string>
    <string name="map_details_within_walking_distance">Within Walking Distance: </string>

    <!-- Settings Preferences-->
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Dynamic Colors -->
    <string name="pref_dynamic">Use Dynamic Colors</string>
    <string name="pref_dynamic_key">dynamic_colors</string>
    <string name="pref_dynamic_def_value">false</string>
    <string name="pref_dynamic_summary">Apply Material You dynamic colors if available</string>
    <!-- Theme -->
    <string name="pref_theme">Choose Theme</string>
    <string name="pref_theme_key">device_theme</string>
    <string name="pref_theme_def_value">3</string>
    <string name="pref_light">Light</string>
    <string name="pref_dark">Dark</string>
    <string name="pref_sys">Follow device theme</string>
    <!-- Advanced -->
    <string name="pref_title_feedback">Send App Feedback</string>
    <string name="pref_summary_feedback">Email developer</string>
    <string name="pref_title_version">Application Version</string>
    <string name="pref_summary_version">1.2.0</string>
    <string name="pref_title_licenses">Open Source Licenses</string>
    <string name="pref_summary_licenses">View the GNU General Public License</string>
    <string name="pref_title_updates">Check for Updates</string>
    <string name="pref_summary_updates">Check for new transit schedules</string>
    <string name="version">Application Version</string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy_summary">More Information</string>
    <string name="terms_title">Terms and Conditions</string>
    <string name="terms_summary">More Information</string>
    <string name="arrow">Arrow</string>
    <string name="menu_reverse">Reverse Direction</string>
    <string name="info_icon_desc">Info Icon</string>
    <string name="map_state_divider_text">New Jersey</string>
    <string name="reverse_stations">Reverse Stations</string>
    <string name="travel_from_station">Travel from station</string>
    <string name="travel_to_station">Travel to station</string>
    <string name="destination_icon">Destination icon</string>
    <string name="dots_icon">Dots icon</string>
    <string name="source_icon">Source icon</string>
    <string name="arrival_time_arrow">Arrival time arrow</string>
    <string name="arrival_arrow_loading">Arrival arrow loading</string>
    <string name="special_schedules_title">Special schedules title</string>
    <string name="station_icon">Station icon</string>
    <string name="station_information_link">Station information link</string>
    <string name="settings_content_scrollable">Settings content scrollable</string>
    <string name="information_section">Information section</string>
    <string name="stations_map_section">Stations map section</string>
    <string name="schedules_section">Schedules section</string>
    <string name="no_network_connection">No network connection. Working offline.</string>
    <string name="close_to_schedule">Trains are operating on or close to schedule.</string>
    <string name="download_on_mobile_data">Download schedules using cellular data</string>
    <string name="download_on_mobile_data_summary">Automatically download special schedules when WiFi is not available</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_message">
        \n1. Improvements to the look and feel of the app\n\n2. Station details are now shown in-app within the Station Map section\n\n3. Fixed a bug where the special schedules sheet would close when scrolling through arrivals\n\n4. Fixed a bug where eastbound special schedules would appear incorrectly\n\n5. General performance improvements</string>
    <string name="changelog_ok_button">Great!</string>

    <!--StationDetailsFragment-->
    <string name="elevator_image_content_description">image of an elevator</string>
    <string name="escalator_content_description">image of an escalator</string>
    <string name="parking_content_description">image of a parking sign</string>
    <string name="taxi_content_description">image of a taxi cab</string>
    <string name="bike_racks_content_description">image of bike racks</string>
    <string name="elevator">Elevator</string>
    <string name="escalator">Escalator</string>
    <string name="parking">Parking</string>
    <string name="taxi">Taxi</string>
    <string name="bike_racks">Bike Racks</string>
    <string name="default_title">Default title…</string>
    <string name="default_description">Default description…</string>
    <string name="map_details_station_hours">Station Hours:</string>
    <string name="sample_text">Avenue of the Arts Kimmel Center Academy of Music Merriam Theater Wilma Theaters University of the Arts Rittenhouse Square</string>
    <string name="fares_from">From:</string>
    <string name="fares_from_lindenwold">Lindenwold, Ashland &amp; Woodcrest</string>
    <string name="fares_from_haddonfield">Haddonfield, Westmont &amp; Collingswood</string>
    <string name="fares_from_ferry_avenue">Ferry Avenue (Camden)</string>
    <string name="fares_from_any_nj">Any New Jersey station (except between Broadway and City Hall)</string>
    <string name="fares_from_broadway">Broadway (Camden)</string>
    <string name="fares_from_broadway_city_hall">Broadway &amp; City Hall (Camden)</string>
    <string name="fares_any_philadelphia">Any Philadelphia Station</string>
    <string name="fares_to">"To: "</string>
    <string name="fares_to_philadelphia">"Philadelphia"</string>
    <string name="fares_to_any_nj">Any New Jersey Station</string>
    <string name="fares_to_city_hall">City Hall (Camden)</string>
    <string name="fares_one_way">One-Way:</string>
    <string name="fares_one_way_lindenwold_to_phila">$3.00</string>
    <string name="fares_one_way_haddonfield_to_phila">$2.60</string>
    <string name="fares_one_way_ferry_avenue">$2.25</string>
    <string name="fares_one_way_any_nj">$1.60</string>
    <string name="fares_one_way_broadway_west">$1.40</string>
    <string name="fares_round_trip">Round-Trip:</string>
    <string name="fares_round_trip_lindenwold_to_phila">$6.00</string>
    <string name="fares_round_trip_haddonfield_to_phila">$5.20</string>
    <string name="fares_round_trip_ferry_avenue">$4.50</string>
    <string name="fares_round_trip_any_nj">$3.20</string>
    <string name="fares_round_trip_broadway_west">$2.80</string>
    <string name="fares_this_station">This Station</string>
    <string name="fares_child_fares_body">Children four (4) and under ride free when accompanied by a fare-paying adult.</string>
    <string name="fares_child_fares_title">Child Fares</string>
    <string name="fares_options_body">Fare gates accept FREEDOM Cards, SHARE Cards and paper tickets.</string>
    <string name="fares_options_title">Fare Payment Options</string>
    <string name="fares_reduced_body">A Reduced Fare Program (RFP) is available to senior citizens, people with disabilities, and Medicare card holders. Eligible individuals may travel between any two PATCO stations during off-peak hours for $0.70, regardless of distance traveled. The reduced fare is set as half the lowest full fare. For program information, please visit PATCO\'s Website.</string>
    <string name="fares_reduced_title">Reduced Fare Program</string>
    <string name="fares_passes_body">Weekend Monthly Passes offer unlimited travel between Friday and Sunday nights for $18/month.</string>
    <string name="fares_passes_title">Weekend &amp; Monthly Pass</string>
    <string name="fares_from_this_station">This Station</string>

    <string-array name="pref_themeOptions_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>Follow device theme</item>
    </string-array>

    <string-array name="pref_themeOptions_values">
        <item>Light</item>
        <item>Dark</item>
        <item>Follow device theme</item>
    </string-array>

</resources>
