<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="Display">
        <ListPreference
            android:key="deviceTheme"
            android:title="Choose Theme"
            android:entries="@array/pref_themeOptions_entries"
            android:entryValues="@array/pref_themeOptions_values"
            app:defaultValue="DEFAULT"
            android:summary="%s"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Travel">
        <ListPreference
            android:key="default_source"
            android:title="Default Source Station"
            android:entries="@array/stations_list"
            android:entryValues="@array/stations_list"
            app:defaultValue="Lindenwold"
            android:summary="%s"/>
        <ListPreference
            android:key="default_dest"
            android:title="Default Destination Station"
            android:entries="@array/stations_list"
            android:entryValues="@array/stations_list"
            app:defaultValue="15/16th &amp; Locust"
            android:summary="%s"/>
        <Preference
            android:key="pref_commuter"
            android:title="Commuter Mode"
            android:summary="Automatically reverse travel direction">

        </Preference>

        <Preference
            android:key="pref_notifications"
            android:title="Arrival Notifications"
            android:summary="Set train notifications">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="More">
        <Preference
            android:title="@string/pref_title_feedback"
            android:summary="@string/pref_summary_feedback">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:david.r.pape@gmail.com">
                <extra
                    android:name="android.intent.extra.SUBJECT"
                    android:value="Feedback"/>
                <extra
                    android:name="android.intent.extra.TEXT"
                    android:value="Text of Feedback"/>
            </intent>
        </Preference>

        <Preference
            android:key="check_updates"
            android:title="@string/pref_title_updates"
            android:summary="@string/pref_summary_updates">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="About">
        <Preference
            android:title="@string/pref_title_version"
            android:summary="@string/pref_summary_version">
        </Preference>

        <Preference
            android:key="open_licenses"
            android:title="@string/pref_title_licenses"
            android:summary="@string/pref_summary_licenses">
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>