<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_even_background">

            <TextView
                android:id="@+id/tableFromTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:paddingStart="4dp"
                android:paddingTop="4dp"
                android:paddingEnd="0dp"
                android:paddingBottom="4dp"
                android:text="@string/fares_from"
                android:textColor="@color/table_text"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:paddingStart="4dp"
                android:paddingTop="4dp"
                android:paddingEnd="0dp"
                android:paddingBottom="4dp"
                android:text="@string/fares_to"
                android:textColor="@color/table_text"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:paddingStart="4dp"
                android:paddingTop="4dp"
                android:paddingEnd="0dp"
                android:paddingBottom="4dp"
                android:text="@string/fares_one_way"
                android:textColor="@color/table_text"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:paddingStart="4dp"
                android:paddingTop="4dp"
                android:paddingEnd="0dp"
                android:paddingBottom="4dp"
                android:text="@string/fares_round_trip"
                android:textColor="@color/table_text"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/lindenwoldToPhiladelphiaRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_odd_background">

            <TextView
                android:id="@+id/thisStationToPhiladelphia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_from_this_station"
                android:textColor="@color/table_text" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_to_philadelphia"
                android:textColor="@color/table_text" />

            <TextView
                android:id="@+id/thisStationToPhiladelphiaOneWay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_one_way_lindenwold_to_phila"
                android:textColor="@color/table_text" />

            <TextView
                android:id="@+id/thisStationToPhiladelphiaRoundTrip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_round_trip_lindenwold_to_phila"
                android:textColor="@color/table_text" />
        </TableRow>

        <TableRow
            android:id="@+id/anyNjToAnyNjRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_even_background">

            <TextView
                android:id="@+id/thisStationToNewJersey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_from_any_nj"
                android:textColor="@color/table_text" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_to_any_nj"
                android:textColor="@color/table_text" />

            <TextView
                android:id="@+id/thisStationToNewJerseyOneWay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_one_way_any_nj"
                android:textColor="@color/table_text" />

            <TextView
                android:id="@+id/thisStationToNewJerseyRoundTrip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_round_trip_any_nj"
                android:textColor="@color/table_text" />
        </TableRow>

        <TableRow
            android:id="@+id/broadwayToCityHallRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_odd_background">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_from_broadway"
                android:textColor="@color/table_text" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_to_city_hall"
                android:textColor="@color/table_text" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_one_way_broadway_west"
                android:textColor="@color/table_text" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_round_trip_broadway_west"
                android:textColor="@color/table_text" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
