<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_even_background">
            <TextView
                android:id="@+id/tableFromTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:paddingTop="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:paddingBottom="4dp"
                android:textStyle="bold"
                android:text="@string/fares_from">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:paddingTop="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:paddingBottom="4dp"
                android:textStyle="bold"
                android:text="@string/fares_to">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:paddingTop="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:paddingBottom="4dp"
                android:textStyle="bold"
                android:text="@string/fares_one_way">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:paddingTop="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:paddingBottom="4dp"
                android:textStyle="bold"
                android:text="@string/fares_round_trip">
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/lindenwoldToPhiladelphiaRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_odd_background">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_from_lindenwold">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_to_philadelphia">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_one_way_lindenwold_to_phila">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_round_trip_lindenwold_to_phila">
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/haddonfieldToPhiladelphiaRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_even_background">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_from_haddonfield">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_to_philadelphia">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_one_way_haddonfield_to_phila">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_round_trip_haddonfield_to_phila">
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/FerryAvenueToPhiladelphiaRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_odd_background">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_from_ferry_avenue">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_to_philadelphia">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_one_way_ferry_avenue">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_round_trip_ferry_avenue">
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/anyNjToAnyNjRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_even_background">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_from_any_nj">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_to_any_nj">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_one_way_any_nj">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_round_trip_any_nj">
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/braodwayToCityHallRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_odd_background">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_from_broadway">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_to_city_hall">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_one_way_broadway_west">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_round_trip_broadway_west">
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/broadwayCityHallToPhiladelphiaRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_even_background">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_from_broadway_city_hall">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_to_philadelphia">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/fares_one_way_broadway_west">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_round_trip_broadway_west">
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/philadelphiaToPhiladelphiaRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_odd_background">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_any_philadelphia">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_any_philadelphia">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_one_way_broadway_west">
            </TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="4dp"
                android:text="@string/fares_round_trip_broadway_west">
            </TextView>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
